fix: fixed white page bg on mobile

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -170,6 +170,9 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html {
+    @apply bg-background;
+  }
   body {
     @apply bg-background font-sans text-foreground;
   }
